--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -15,19 +15,23 @@ const { title } = Astro.props;
     }
 
     .markdown-body h1 {
-        @apply block text-4xl font-bold;
+        @apply font-sans block text-4xl font-bold w-full border-b-2 border-gray-300 pb-3 my-4;
     }
 
     .markdown-body h2 {
-        @apply block text-3xl font-bold w-full border-b-2 border-gray-300 pb-2;
+        @apply block text-3xl font-bold w-full border-b-2 border-gray-200 py-2 my-2;
     }
 
     .markdown-body h3 {
         @apply text-2xl;
     }
 
+    .markdown-body p {
+        @apply my-2;
+    }
+
     .markdown-body li {
-        @apply mx-8;
+        @apply mx-8 my-2;
         list-style-type: disc;
     }
 
