--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -11,15 +11,15 @@ const { title } = Astro.props;
 
 <style is:global>
     .markdown-body {
-        @apply text-xl font-sans;
+        @apply text-xl font-sans font-light;
     }
 
     .markdown-body h1 {
-        @apply font-sans block text-4xl font-bold w-full border-b-2 border-gray-300 pb-3 my-4;
+        @apply block text-4xl font-normal w-full border-b-2 border-gray-300 pb-3 my-4;
     }
 
     .markdown-body h2 {
-        @apply block text-3xl font-bold w-full border-b-2 border-gray-200 py-2 my-2;
+        @apply block text-3xl font-normal w-full border-b-2 border-gray-200 py-2 my-2;
     }
 
     .markdown-body h3 {
